# AI-Resume-Screener-

./: CMakeLists.txt  README.md
 data /: resume.txt
src/: database.cpp  database.h  main.cpp  pdf_to_text.sh  resume_parser.cpp  resume_parser.h  scoring.cpp  scoring.h
